# tfg-solar-abm

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml
data/: README.md  baseline_agents.csv  baseline_model.csv  robustness.csv  sensitivity_beta.csv  sensitivity_eta.csv  sensitivity_phi.csv  storage_agents.csv  storage_model.csv  table_6_1_comparison.csv
docs/: index.md
docs/anexos/: a-agente-unico.md  b-nash-heterogeneo.md
docs/extras/: indice-aprobado.md  notas-aprendizaje.md  plan-banco-pruebas.md
docs/memoria/: 01-introduccion.md  02-motivacion.md  03-mercado-electrico.md  04-modelo-abm.md  05-implementacion.md  06-escenarios.md  07-analisis-economico.md  08-conclusiones.md  bibliografia.md  index.md
docs/validacion/: 00_quickstart.ipynb  01_validacion_precios.ipynb  02_validacion_almacenamiento.ipynb  03_validacion_aprendizaje.ipynb  04_coherencia_temporal.ipynb  05_reproducibilidad.ipynb  06_diagnostico_aprendizaje.ipynb  index.md
notebooks/: genera_figuras.py
src/: __init__.py  model.py
tests/: test_model.py
