[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg-solar-abm"
version = "0.1.0"
description = "Modelo basado en agentes de un mercado eléctrico con almacenamiento solar adaptativo (TFG)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Carlos Molina Centeno" },
]
license = { text = "MIT" }

dependencies = [
    "mesa>=3.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-jupyter>=0.25",
    "pymdown-extensions>=10.7",
]
test = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
